# validator-bootstrap

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: build-and-publish.yml
src/: cli.rs  downloader.rs  main.rs  node_utils.rs
