[package]
name = "validator-bootstrap"
version = "1.0.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
sha1 = "0.10.6"
urlencoding = "2"
anyhow = "1"
serde_json = "1"
clap = { version = "4.5.51", features = ["derive"] }
